# metrics-dashboard-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
examples/: simple.rs
public/: apexcharts.js  index.html  index.js  style.css
src/: lib.rs  metrics_process.rs  middleware.rs  recoder.rs  recorder.rs
src/recorder/: counter.rs  gauge.rs  histogram.rs
