[package]
name = "metrics-dashboard"
version = "0.1.3"
edition = "2021"
description = "Zero-config dashboard with metrics-rs"
repository = "https://github.com/giangndm/metrics-dashboard-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
metrics = "0.21.1"
metrics-util = "0.15.1"
metrics-prometheus = "0.5.0"
poem = { version = "1.3.59", features = ["embed", "static-files"] }
rust-embed = { version = "8.0.0", optional = true }
serde = "1.0.193"
prometheus = "0.13.3"
sysinfo = { version = "0.29.11", optional = true }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[features]
default = ["embed"]
embed = ["rust-embed"]
system = ["sysinfo"]
