[package]
name = "metrics-dashboard"
version = "0.2.1"
edition = "2021"
description = "Zero-config dashboard with metrics-rs"
repository = "https://github.com/giangndm/metrics-dashboard-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
metrics = "0.22"
metrics-util = "0.16"
metrics-prometheus = "0.7"
poem = { version = "2.0", features = ["embed", "static-files"] }
rust-embed = { version = "8.2", optional = true }
serde = "1"
prometheus = "0.13"
sysinfo = { version = "0.30", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[features]
default = ["embed"]
embed = ["rust-embed"]
system = ["sysinfo"]
