[package]
name = "metrics-dashboard"
version = "0.3.3"
edition = "2021"
description = "Zero-config dashboard with metrics-rs"
repository = "https://github.com/giangndm/metrics-dashboard-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
metrics = "0.22"
metrics-util = "0.16"
metrics-prometheus = "0.6"
poem = { version = "3.1", features = ["embed", "static-files"] }
rust-embed = { version = "8.2", optional = true }
serde = "1"
prometheus = "0.13"
sysinfo = { version = "0.32", optional = true }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[features]
default = ["embed"]
embed = ["rust-embed"]
system = ["sysinfo"]
